wip margins/layout issues

--- a/css/index.css
+++ b/css/index.css
@@ -150,7 +150,6 @@ html {
   position: relative;
   background-color: white;
   transition: right 2s ease;
-  right: 0;
 }
 
 .cookies-overlay, .content-overlay {
@@ -1061,7 +1060,7 @@ nav {
   background-color: #808080;
   color: white;
   background-size: cover;
-  background-position: right 0;
+  background-position: right;
   background-blend-mode: multiply;
   background-repeat: no-repeat;
   height: 34.375rem;
